# Radialer

./: CMakeLists.txt  README.md
.ipynb_checkpoints/: README-checkpoint.md
archive/: rad4m.cpp  rad4m.out  radazi.cpp  radial  radial.cpp  radial.out  radial2.cpp  radial3.cpp  radial3.out  radial4.cpp  radial4.out  radial4s.cpp  radial4s.out  radial4u.cpp  radial4u.out  radialit.cpp  readRadial.out  trapzoid.cu
archive/hdf5_exs/: SimpleCompound.h5  complex_3d_example.h5  example.h5  h5complex  h5complex.cpp  h5double  h5double.cpp  h5ex  h5matread  h5matread.cpp  h5matrix  h5matrix.cpp  h5read  h5read.cpp  hf  hf.cpp  matrix_double_example.h5  matrix_example.h5
include/: radial.h
src/: radial.cpp
tests/: 4d_array.txt  4d_complex_array.txt  CMakeLists.txt  README.md  h5read.cpp  main.cpp  read.py  writing  writing.cpp
tests/.ipynb_checkpoints/: vis-checkpoint.ipynb
tests/cnpy/: CMakeLists.txt  npytest.cpp
tests/cnpy/archive/: CMakeLists.txt
tests/hi5/: CMakeLists.txt  h5complex.cpp
tests/mutilthread/: multirun.cpp
tests/old/: readrad  readrad.cpp  readradial.cpp
